# homework-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: children.yaml.example  subjects.yaml
scripts/: sniff_edrolo_api.py  sniff_eduperfect_api.py  start_zen_marionette.sh
src/homework_hub/: __init__.py  __main__.py  auth_bootstrap.py  config.py  daemon.py  medallion_orchestrator.py  models.py  orchestrator.py  schema.py  secrets.py  sheet_template.py  wiring.py  zen.py
src/homework_hub/pipeline/: __init__.py  ingest.py  link_detector.py  publish.py  subjects.py  transform.py
src/homework_hub/sinks/: __init__.py  gold_sink.py  sheets.py  (+2 more)
tests/: test_auth_bootstrap.py  test_classroom_source.py  test_cli.py  test_compass_source.py  test_config.py  test_daemon.py  test_edrolo_source.py  test_eduperfect_source.py  test_gold_sink.py  test_medallion_orchestrator.py  test_models.py  test_orchestrator.py  test_pipeline_ingest.py  test_pipeline_link_detector.py  test_pipeline_publish.py  test_pipeline_subjects.py  test_pipeline_transform.py  test_schema.py  test_secrets.py  test_sheet_template.py  test_sheets_client.py  test_sheets_diff.py  test_sheets_sink.py  test_state_schema_medallion.py  test_state_store.py  test_wiring.py  test_zen.py
tests/fixtures/: classroom_course.json  classroom_coursework.json  classroom_submission.json  compass_learning_task.json  compass_response.json  edrolo_courses.json  edrolo_response.json  edrolo_storage_state.json  edrolo_task.json  eduperfect_task.json
(+8 files in other folders)
